--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6239,7 +6239,7 @@ label,
 	width: 150px;
 	height: 150px;
 	margin: 25px;
-	padding: 25px;
+//	padding: 25px;
 	border: 1px solid #000000;
 	border-radius: 2px;
 }
@@ -6248,3 +6248,55 @@ label,
 	cursor: pointer;
 }
 
+.infoShow{
+	width:100%; 
+	height: 50%; 
+	z-index:2; 
+	position: relative; 
+	top: -120px;
+}
+
+.blocks div:nth-child(1), .blocks div:nth-child(2){
+	padding: 15px;
+}
+
+.search{
+	padding: 15px;
+	margin: 15px;
+	list-style-type: none;
+}
+
+.search:hover{
+	border: 1px solid #000000;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.search div span{
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-right: 15px;
+	margin-left: 15px;
+}
+.info{
+	//position: relative;
+	//top: -115px;
+	background: #000000;
+	color: #FFFFFF;
+}
+.info{
+	top:115.5em;
+	-webkit-transition: top 1s ease-out 0.5s;
+     -moz-transition: top 1s ease-out 0.5s;
+     -o-transition: top 1s ease-out 0.5s;
+     transition: top 1s ease-out 0.5s;
+}
+
+.info div{
+	padding: 5px !important;;
+}
+
+.highlightedText
+{
+	background: yellow;
+}
