--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6300,3 +6300,83 @@ label,
 {
 	background: yellow;
 }
+
+.opacity {
+	visibility: hidden;
+}
+.opacity {
+	animation-name: myopacity;
+	-webkit-animation-name: myopacity; 
+	animation-duration: 1.7s; 
+	-webkit-animation-duration: 1.7s;
+	animation-timing-function: ease-out; 
+	-webkit-animation-timing-function: ease-out; 
+	visibility: visible !important; 
+}
+
+@keyframes myopacity{
+	0%{transform:scale(0);opacity:0}
+	10%{transform:scale(0.1);opacity:.1}
+	20%{transform:scale(0.2);opacity:.2}
+	30%{transform:scale(0.3);opacity:.3}
+	40%{transform:scale(0.4);opacity:.4}
+	50%{transform:scale(0.5);opacity:.5}
+	60%{transform:scale(0.6);opacity:.6}
+	70%{transform:scale(0.7);opacity:.7}
+	80%{transform:scale(0.8);opacity:.8}
+	90%{transform:scale(0.9);opacity:.9}
+	100%{transform:scale(1);opacity:1}
+}
+@-webkit-keyframes myopacity
+{
+	0%{transform:scale(0);opacity:0}
+	10%{transform:scale(0.1);opacity:.1}
+	20%{transform:scale(0.2);opacity:.2}
+	30%{transform:scale(0.3);opacity:.3}
+	40%{transform:scale(0.4);opacity:.4}
+	50%{transform:scale(0.5);opacity:.5}
+	60%{transform:scale(0.6);opacity:.6}
+	70%{transform:scale(0.7);opacity:.7}
+	80%{transform:scale(0.8);opacity:.8}
+	90%{transform:scale(0.9);opacity:.9}
+	100%{transform:scale(1);opacity:1}
+}
+
+.ng-modal-overlay {
+    position:absolute;
+    z-index:9999;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:#000000;
+    opacity: 0.5;
+}
+.ng-modal-dialog {
+    z-index:10000;
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 4px 4px 80px #000;
+}
+.ng-modal-dialog-content {
+    padding:10px;
+    text-align: left;
+	z-index:10000;
+}
+.ng-modal-close {
+    position: absolute;
+    top: 3px;
+    right: 5px;
+    padding: 5px;
+    cursor: pointer;
+    font-size: 120%;
+    display: inline-block;
+    font-weight: bold;
+    font-family: 'arial', 'sans-serif';
+}
